manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-mutator
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-mutator
  template:
    metadata:
      labels:
        app: kube-mutator
    spec:
      serviceAccountName: kube-mutator
      containers:
        - name: kube-mutator
          image: kube-mutator:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: tls
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: kube-mutator-tls
