manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-mutator-webhook
  namespace: default
spec:
  selector:
    app: kube-mutator
  ports:
    - port: 443
      targetPort: 8443
