manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kube-mutator
webhooks:
  - name: kube-mutator-webhook.default.svc
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Fail
    clientConfig:
      service:
        name: kube-mutator-webhook
        namespace: default
        path: "/mutate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGVENDQWYyZ0F3SUJBZ0lVTTlIaTNEN1JOdTdMYmVOVVg3ZWJnY0EyU3c4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dqRVlNQllHQTFVRUF3d1BhM1ZpWlMxdGRYUmhkRzl5TFdOaE1CNFhEVEkyTURReE5ERTJNVGd6TTFvWApEVEkzTURReE5ERTJNVGd6TTFvd0dqRVlNQllHQTFVRUF3d1BhM1ZpWlMxdGRYUmhkRzl5TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXBFUzNpbG9vdmR6WVRRc0xlOTRsT2Z3QmRVMisKZ2JPSmNkZjk2cUFud2s3MVc1MUhhZ0kzOWdIUVVqWldzRDhYdndPV3Q5eTd0b2FNMTcyZ2pzQzdsYnZoNnhHTgpWUkpTWkt5Q3B [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - kube-public
